# serializer version: 1
# name: test_entity_state_attrs[switch.i4_edrive40_climate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.i4_edrive40_climate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Climate',
    'platform': 'bmw_connected_drive',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'climate',
    'unique_id': 'WBA00000000DEMO02-climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_state_attrs[switch.i4_edrive40_climate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'i4 eDrive40 Climate',
    }),
    'context': <ANY>,
    'entity_id': 'switch.i4_edrive40_climate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_state_attrs[switch.ix_xdrive50_charging-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.ix_xdrive50_charging',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Charging',
    'platform': 'bmw_connected_drive',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'charging',
    'unique_id': 'WBA00000000DEMO01-charging',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_state_attrs[switch.ix_xdrive50_charging-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'iX xDrive50 Charging',
    }),
    'context': <ANY>,
    'entity_id': 'switch.ix_xdrive50_charging',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entity_state_attrs[switch.ix_xdrive50_climate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.ix_xdrive50_climate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Climate',
    'platform': 'bmw_connected_drive',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'climate',
    'unique_id': 'WBA00000000DEMO01-climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_state_attrs[switch.ix_xdrive50_climate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'iX xDrive50 Climate',
    }),
    'context': <ANY>,
    'entity_id': 'switch.ix_xdrive50_climate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entity_state_attrs[switch.m340i_xdrive_climate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.m340i_xdrive_climate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Climate',
    'platform': 'bmw_connected_drive',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'climate',
    'unique_id': 'WBA00000000DEMO03-climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_state_attrs[switch.m340i_xdrive_climate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'M340i xDrive Climate',
    }),
    'context': <ANY>,
    'entity_id': 'switch.m340i_xdrive_climate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
